# ComfyUI-ZMongo

./: README.md  __init__.py  __init__.py.040126_1928  presets.json  pyproject.toml  requirements.txt  standalone_demo.py
api/: __init__.py  zmongo_field_selector_api.py
example_workflows/: zmongo_db_browser.json  zmongo_record_loop_demoa.json  zmongo_system_demoa.json
examples/: zmongo_chat_agent_starter.json  zmongo_database_browser.json  zmongo_loop_sd15_demo.json
gui/: __init__.py  preset_api.py  zadmin.py  zmongo_admin_tabs.py  zmongo_manager.py  zmongo_wrapper.py
js/: app.js  preset_panel.js  zmongo_field_selector.js  zmongo_field_selector_dropdown.js  zmongo_record_editor.js  zmongo_tabular_record_view.js
nodes/: __init__.py  database_browser_node.py  llm_nodes.py  zmongo_adventure_nodes.py  zmongo_basic_nodes.py  zmongo_chat_nodes.py  zmongo_config_node.py  zmongo_field_selector_node.py  zmongo_llm_nodes.py  zmongo_nodes.py  zmongo_operations_node.py  zmongo_record_editor_node.py  zmongo_record_node.py  zmongo_tabular_record_view_node.py  zmongo_text_fetcher_node.py  zmongo_utility_nodes.py  zmongo_workflow_nodes.py  zretriever_node.py
nodes/model_loader/: __init__.py  zmongo_model_compatibility_display_node.py  zmongo_universal_model_loader_node.py  zmongo_universal_model_selector_node.py
scipts/: app.js
server/: server.py
src/: __init__.py  preset_api.py  zadmin.py  zmongo_admin_gui.py  zmongo_admin_tabs.py  zmongo_field_selector_api.py  zmongo_field_selector_node.py  zmongo_flattened_field_selector_node.py  zmongo_manager.py  zmongo_nodes.py  zmongo_query_builder_node.py  zmongo_record_editor_api.py  zmongo_record_splitter.py  zmongo_tabular_record_view_api.py  zmongo_workflow_node.py  zmongo_wrapper.py
src/model_loader/: __init__.py  zmongo_builtin_loader_adapter_node.py  zmongo_model_introspector_node.py  zmongo_universal_adapter_node.py  zmongo_universal_model_selector_node.py
src/zmongo_toolbag/: README_ZRETRIEVER.md  RUN_ME_ZEMBEDDER.md  __init__.py  buffered_ttl_cache.py  codex_repository.py  data_processing.py  data_processor.py  data_processor_OLD.py  gemini_embedding_model.py  local_vector_search.py  mongo_onehot_db.py  safe_result.py  zembedder.py  zembedder_BAK.py  zembedder_BAK_BAK.py  zmanager.py  zmongo.py  zmongo_012626_0939.py  zmongo_121525_1813.py  zmongo_onehot_db.py  zmongo_response_result.py  zmongo_response_results.py  zmongo_zstandard_interface.py  zretriever.py  zstandard_minimal_example.py
tests/: test_data_processor.py  test_data_processor_to_json_compatible.py  test_safe_result.py  test_zmongo_integration_real.py
web/js/: app.js  preset_panel.js  zmongo_field_selector.js  zmongo_field_selector_dropdown.js  zmongo_query_builder.js  zmongo_record_editor.js  zmongo_tabular_record_view.js  zmongo_universal_adapter.js
xyzzy/: xyzzy.txt
zmongo_toolbag/: __init__.py  data_processor.py  safe_result.py  zembedder.py  zmongo.py
