[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI-ZMongo"
version = "0.1.1"
description = "Professional ZMongo Legal Operations suite for ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "comfyuser"}
]
dependencies = [
    "motor>=3.4",
    "pymongo>=4.6",
    "quart>=0.19",
    "werkzeug>=3.0",
    "python-dotenv>=1.0",
    "numpy",
    "torch",
    "google-genai",
    "aiohttp",
    "langchain",
    "langchain-community"
]

[tool.poetry]
package-mode = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"ComfyUI_ZMongo" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["*"]
exclude = [
    "tests*",
    "examples*",
    "scripts*",
    "**/dist*",
    "**/build*",
    "**/.venv*",
    "__pycache__*"
]